[project]
name = "nice-py-toolchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.3",
    "pyright>=1.1.378",
    "pytest>=8.3.2",
]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
target-version = "py312"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
pythonVersion = "3.12"
exclude = [
    ".venv",
]

[tool.pytest.ini_options]
addopts = ""
testpaths = [
    "tests",
]